# otus-cpp-prof-hw-04-ip-print

./: CMakeLists.txt  Doxyfile  graph_legend.html  index.html  ip_template.h  lib.cpp  main.cpp
.github/workflows/: release.yml
